[gd_scene load_steps=32 format=3 uid="uid://cromr3px1p3uk"]

[ext_resource type="PackedScene" uid="uid://cdi0ll1as8vee" path="res://windows/tuto_bot.tscn" id="1_1otat"]
[ext_resource type="Script" path="res://scripts/simulation_1.gd" id="1_5wa10"]
[ext_resource type="Script" path="res://scripts/quit_button.gd" id="2_3or6o"]
[ext_resource type="Script" path="res://scripts/button_tuto_bot.gd" id="2_80nif"]
[ext_resource type="Texture2D" uid="uid://cjklklgnclmgf" path="res://assets/Shortcut_Mechanic_Logo.png" id="2_eapes"]
[ext_resource type="Script" path="res://scripts/windows_button.gd" id="3_eskwv"]
[ext_resource type="Texture2D" uid="uid://ctoj8ovlh3084" path="res://icon.svg" id="3_tij7h"]
[ext_resource type="Texture2D" uid="uid://dg12xdnfhqkc5" path="res://assets/Tuto_Bot_Icon.png" id="5_hs0hn"]
[ext_resource type="Script" path="res://scripts/home_file_button.gd" id="5_hu8oa"]
[ext_resource type="Script" path="res://scripts/files_1.gd" id="7_5wk0m"]
[ext_resource type="Texture2D" uid="uid://dkkcvqvgrl3a6" path="res://assets/File_Icon.png" id="7_wvhhi"]
[ext_resource type="Script" path="res://scripts/files_2.gd" id="9_sbgmn"]
[ext_resource type="PackedScene" uid="uid://cgug8p5is50tg" path="res://components/File.tscn" id="10_p1ras"]
[ext_resource type="Texture2D" uid="uid://dgasafxylceh2" path="res://assets/Folder.webp" id="11_ujhki"]
[ext_resource type="Texture2D" uid="uid://b2coct0qgxn3k" path="res://assets/File_Selected_Multiple.webp" id="13_g6inc"]
[ext_resource type="Texture2D" uid="uid://c7m1n824hd233" path="res://assets/Bort_Broken.png" id="16_54gsj"]

[sub_resource type="Gradient" id="Gradient_btul5"]
colors = PackedColorArray(0.00323049, 0.419429, 0.627931, 1, 0.66244, 0.656405, 5.77569e-07, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h5thj"]
gradient = SubResource("Gradient_btul5")
width = 1920
height = 1080
fill_from = Vector2(0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_flfim"]

[sub_resource type="Gradient" id="Gradient_s6uak"]
colors = PackedColorArray(0.631373, 0.631373, 0.631373, 0.470588, 0.745098, 0.745098, 0.745098, 0.470588)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y8ifc"]
gradient = SubResource("Gradient_s6uak")
width = 1156
height = 50
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_a0gcj"]
colors = PackedColorArray(0.504164, 0.493083, 0.58463, 1, 0.470076, 0.470076, 0.470076, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ta0yw"]
gradient = SubResource("Gradient_a0gcj")

[sub_resource type="Gradient" id="Gradient_2nem8"]
colors = PackedColorArray(0.212305, 0.212305, 0.212305, 1, 0.28485, 0.28485, 0.28485, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ltb0v"]
gradient = SubResource("Gradient_2nem8")
fill_from = Vector2(0.200855, 0.384615)

[sub_resource type="Gradient" id="Gradient_iwaxu"]
colors = PackedColorArray(0.253656, 0.158677, 0.0938829, 1, 0.385025, 0.219445, 0.235301, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_01gl6"]
gradient = SubResource("Gradient_iwaxu")

[sub_resource type="Gradient" id="Gradient_62q8u"]
offsets = PackedFloat32Array(0.0037594, 0.496241, 1)
colors = PackedColorArray(0.301642, 0.228525, 0.426527, 1, 0.208323, 0.262638, 0.506225, 1, 0, 0.368627, 0.458824, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c1v3h"]
gradient = SubResource("Gradient_62q8u")
fill_from = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_jju38"]
colors = PackedColorArray(0.249484, 0.305553, 0.30313, 1, 0.34838, 0.385079, 0.403192, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l2ald"]
gradient = SubResource("Gradient_jju38")
width = 200
height = 250

[node name="Simulation_1" type="Node2D"]
z_index = 1
script = ExtResource("1_5wa10")

[node name="Wallpaper" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_h5thj")

[node name="WallpaperLogo" type="Sprite2D" parent="Wallpaper"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_eapes")
offset = Vector2(1280, 720)

[node name="Tuto_Bot" parent="." instance=ExtResource("1_1otat")]
initial_position = 0
position = Vector2i(1500, 50)
visible = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="MarginHomePage" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1020.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HomePage" type="GridContainer" parent="Control/MarginHomePage"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 7

[node name="ButtonTutoBot" type="Button" parent="Control/MarginHomePage/HomePage"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
script = ExtResource("2_80nif")

[node name="Sprite2D" type="Sprite2D" parent="Control/MarginHomePage/HomePage/ButtonTutoBot"]
position = Vector2(32, 32)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_hs0hn")

[node name="HomeFileButton" type="Button" parent="Control/MarginHomePage/HomePage"]
visible = false
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
script = ExtResource("5_hu8oa")

[node name="Sprite2D" type="Sprite2D" parent="Control/MarginHomePage/HomePage/HomeFileButton"]
position = Vector2(32, 32)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_wvhhi")

[node name="TextureHomeMenu" type="TextureRect" parent="Control"]
visible = false
layout_mode = 2
offset_top = 915.0
offset_right = 106.0
offset_bottom = 1021.0
texture = SubResource("CanvasTexture_flfim")

[node name="MarginWindowsMenu" type="MarginContainer" parent="Control/TextureHomeMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -113.0
offset_right = 113.0
offset_bottom = 7.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="WindowsMenu" type="VBoxContainer" parent="Control/TextureHomeMenu/MarginWindowsMenu"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="Control/TextureHomeMenu/MarginWindowsMenu/WindowsMenu"]
custom_minimum_size = Vector2(100, 48)
layout_mode = 2

[node name="SettingsText" type="Label" parent="Control/TextureHomeMenu/MarginWindowsMenu/WindowsMenu/SettingsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = 31.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings
"

[node name="QuitButton" type="Button" parent="Control/TextureHomeMenu/MarginWindowsMenu/WindowsMenu"]
custom_minimum_size = Vector2(100, 48)
layout_mode = 2
script = ExtResource("2_3or6o")

[node name="QuitText" type="Label" parent="Control/TextureHomeMenu/MarginWindowsMenu/WindowsMenu/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -11.5
offset_right = 50.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"
horizontal_alignment = 1

[node name="TextureTaskBar" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_y8ifc")

[node name="MarginTaskBar" type="MarginContainer" parent="Control/TextureTaskBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TaskBar" type="HBoxContainer" parent="Control/TextureTaskBar/MarginTaskBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="WindowsButton" type="Button" parent="Control/TextureTaskBar/MarginTaskBar/TaskBar"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
script = ExtResource("3_eskwv")

[node name="Sprite2D" type="Sprite2D" parent="Control/TextureTaskBar/MarginTaskBar/TaskBar/WindowsButton"]
position = Vector2(24, 25)
scale = Vector2(0.296875, 0.28125)
texture = ExtResource("3_tij7h")

[node name="Files1" type="Window" parent="."]
title = "FILES"
position = Vector2i(200, 142)
size = Vector2i(720, 460)
visible = false
unresizable = true
script = ExtResource("7_5wk0m")

[node name="InFile" type="TextureRect" parent="Files1"]
visible = false
offset_top = 40.0
offset_right = 1000.0
offset_bottom = 570.0
texture = SubResource("GradientTexture1D_ta0yw")

[node name="MarginContainer" type="MarginContainer" parent="Files1/InFile"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Files1/InFile/MarginContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_constants/separation = 45

[node name="File_Button" parent="Files1/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
layout_mode = 2

[node name="File_Button2" parent="Files1/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
layout_mode = 2

[node name="File_Button3" parent="Files1/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
layout_mode = 2

[node name="File_Button4" parent="Files1/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
layout_mode = 2

[node name="File_Button5" parent="Files1/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
layout_mode = 2

[node name="File_Button6" parent="Files1/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
layout_mode = 2

[node name="InFile2" type="TextureRect" parent="Files1"]
visible = false
offset_top = 40.0
offset_right = 1000.0
offset_bottom = 570.0
texture = SubResource("GradientTexture1D_ta0yw")

[node name="MarginContainer" type="MarginContainer" parent="Files1/InFile2"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Files1/InFile2/MarginContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_constants/separation = 45

[node name="File_Button" parent="Files1/InFile2/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="File_Button2" parent="Files1/InFile2/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="File_Button3" parent="Files1/InFile2/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="InBot" type="TextureRect" parent="Files1"]
offset_top = 40.0
offset_right = 1000.0
offset_bottom = 570.0
texture = SubResource("GradientTexture1D_ta0yw")

[node name="MarginContainer2" type="MarginContainer" parent="Files1/InBot"]
layout_mode = 0
offset_right = 590.0
offset_bottom = 115.0
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Files1/InBot/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="InBotFile1" type="Button" parent="Files1/InBot/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Files1/InBot/MarginContainer2/HBoxContainer/InBotFile1"]
texture = ExtResource("11_ujhki")
offset = Vector2(22, 22)

[node name="InBotFile2" type="Button" parent="Files1/InBot/MarginContainer2/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(45, 45)
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="Files1/InBot/MarginContainer2/HBoxContainer/InBotFile2"]
texture = ExtResource("11_ujhki")
offset = Vector2(22, 22)

[node name="File_Button" parent="Files1/InBot/MarginContainer2/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="File_Button2" parent="Files1/InBot/MarginContainer2/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="File_Button3" parent="Files1/InBot/MarginContainer2/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="TaskBar" type="TextureRect" parent="Files1"]
offset_top = -23.0
offset_right = 800.0
offset_bottom = 41.0
texture = SubResource("GradientTexture2D_ltb0v")

[node name="BotButton" type="Button" parent="Files1/TaskBar"]
layout_mode = 0
offset_left = 5.0
offset_top = 28.0
offset_right = 85.0
offset_bottom = 59.0
text = "Bot"

[node name="FileButton" type="Button" parent="Files1/TaskBar"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 28.0
offset_right = 180.0
offset_bottom = 59.0
text = "File
"

[node name="FileButton2" type="Button" parent="Files1/TaskBar"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 28.0
offset_right = 180.0
offset_bottom = 59.0
text = "File2
"

[node name="NewFileButton" type="Button" parent="Files1"]
visible = false
offset_right = 60.0
offset_bottom = 30.0
text = "New File"

[node name="Sprite2D" type="Sprite2D" parent="Files1/NewFileButton"]

[node name="Files2" type="Window" parent="."]
auto_translate_mode = 1
title = "FILES"
position = Vector2i(225, 200)
size = Vector2i(720, 460)
visible = false
unresizable = true
script = ExtResource("9_sbgmn")

[node name="InFile" type="TextureRect" parent="Files2"]
visible = false
offset_top = 40.0
offset_right = 1000.0
offset_bottom = 570.0
texture = SubResource("GradientTexture1D_ta0yw")

[node name="MarginContainer" type="MarginContainer" parent="Files2/InFile"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Files2/InFile/MarginContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_constants/separation = 45

[node name="File_Button" parent="Files2/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="File_Button2" parent="Files2/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="File_Button3" parent="Files2/InFile/MarginContainer/HBoxContainer" instance=ExtResource("10_p1ras")]
visible = false
layout_mode = 2

[node name="InBot" type="TextureRect" parent="Files2"]
offset_top = 40.0
offset_right = 1000.0
offset_bottom = 570.0
texture = SubResource("GradientTexture1D_ta0yw")

[node name="MarginContainer2" type="MarginContainer" parent="Files2/InBot"]
layout_mode = 0
offset_right = 590.0
offset_bottom = 115.0
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Files2/InBot/MarginContainer2"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_constants/separation = 45

[node name="InBotFile1" type="Button" parent="Files2/InBot/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(45, 50)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Files2/InBot/MarginContainer2/HBoxContainer/InBotFile1"]
texture = ExtResource("11_ujhki")
offset = Vector2(22, 22)

[node name="InBotFile2" type="Button" parent="Files2/InBot/MarginContainer2/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(45, 50)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Files2/InBot/MarginContainer2/HBoxContainer/InBotFile2"]
texture = ExtResource("11_ujhki")
offset = Vector2(22, 22)

[node name="TaskBar" type="TextureRect" parent="Files2"]
offset_top = -23.0
offset_right = 800.0
offset_bottom = 41.0
texture = SubResource("GradientTexture2D_ltb0v")

[node name="BotButton" type="Button" parent="Files2/TaskBar"]
layout_mode = 0
offset_left = 5.0
offset_top = 28.0
offset_right = 85.0
offset_bottom = 59.0
text = "Bot"

[node name="FileButton2" type="Button" parent="Files2/TaskBar"]
visible = false
layout_mode = 0
offset_left = 100.0
offset_top = 28.0
offset_right = 180.0
offset_bottom = 59.0
text = "File2
"

[node name="Files_Grabbed Window" type="Window" parent="."]
transparent_bg = true
position = Vector2i(200, 200)
visible = false
transient = true
borderless = true
always_on_top = true
transparent = true
unfocusable = true
mouse_passthrough = true

[node name="Files_Grabbed" type="Sprite2D" parent="Files_Grabbed Window"]
top_level = true
z_index = 29
texture = ExtResource("13_g6inc")
centered = false

[node name="Debug Window" type="Window" parent="."]
title = "DEBUG"
position = Vector2i(1450, 800)
size = Vector2i(450, 200)
visible = false
unresizable = true

[node name="TextureRect" type="TextureRect" parent="Debug Window"]
custom_minimum_size = Vector2(450, 200)
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_01gl6")

[node name="RichTextLabel" type="RichTextLabel" parent="Debug Window"]
custom_minimum_size = Vector2(450, 200)
offset_right = 40.0
offset_bottom = 40.0
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
scroll_following = true
tab_size = 6

[node name="Level Chosen" type="Window" parent="."]
initial_position = 1
size = Vector2i(600, 400)
visible = false

[node name="TextureRect" type="TextureRect" parent="Level Chosen"]
custom_minimum_size = Vector2(600, 400)
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_c1v3h")

[node name="RichTextLabel" type="RichTextLabel" parent="Level Chosen"]
custom_minimum_size = Vector2(600, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "[center]Ctrl+N Level Loaded
Level 1.1[/center]"

[node name="Bort Window" type="Window" parent="."]
title = "BORT"
position = Vector2i(20, 750)
size = Vector2i(200, 250)
visible = false

[node name="TextureRect" type="TextureRect" parent="Bort Window"]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_l2ald")

[node name="Sprite2D" type="Sprite2D" parent="Bort Window"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("16_54gsj")
centered = false

[connection signal="button_up" from="Control/MarginHomePage/HomePage/ButtonTutoBot" to="Control/MarginHomePage/HomePage/ButtonTutoBot" method="_on_button_up"]
[connection signal="button_up" from="Control/MarginHomePage/HomePage/HomeFileButton" to="Control/MarginHomePage/HomePage/HomeFileButton" method="_on_button_up"]
[connection signal="button_up" from="Control/TextureHomeMenu/MarginWindowsMenu/WindowsMenu/QuitButton" to="Control/TextureHomeMenu/MarginWindowsMenu/WindowsMenu/QuitButton" method="_on_button_up"]
[connection signal="button_up" from="Control/TextureTaskBar/MarginTaskBar/TaskBar/WindowsButton" to="Control/TextureTaskBar/MarginTaskBar/TaskBar/WindowsButton" method="_on_button_up"]
[connection signal="close_requested" from="Files1" to="Files1" method="_on_close_requested"]
[connection signal="button_up" from="Files1/InBot/MarginContainer2/HBoxContainer/InBotFile1" to="Files1" method="_on_in_bot_file_1_button_up"]
[connection signal="button_up" from="Files1/InBot/MarginContainer2/HBoxContainer/InBotFile2" to="Files1" method="_on_in_bot_file_2_button_up"]
[connection signal="button_up" from="Files1/TaskBar/BotButton" to="Files1" method="_on_bot_button_button_up"]
[connection signal="button_up" from="Files1/NewFileButton" to="." method="_on_new_file_button_button_up"]
[connection signal="close_requested" from="Files2" to="Files2" method="_on_close_requested"]
[connection signal="button_up" from="Files2/InBot/MarginContainer2/HBoxContainer/InBotFile2" to="Files2" method="_on_in_bot_file_2_button_up"]
[connection signal="button_up" from="Files2/TaskBar/BotButton" to="Files2" method="_on_bot_button_button_up"]
